# LegWheel

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/notes/: Note.ipynb  Notes_For_ABAD.ipynb  Validation.py  animation.py  experiment_csv_generator.py
examples/: basic_usage.py  detailed_leg_plot.py  gait_command_export.py  swing_trajectory_analysis.py  test_ik.py  test_robot.py  test_screw.py  validate_corgi_leg_transforms.py
legwheel/: __init__.py
legwheel/bezier/: __init__.py  bezier.py  swing.py
legwheel/config/: __init__.py
legwheel/models/: __init__.py  corgi_leg.py  corgi_robot.py  leg_kinematics.py  leg_model.py
legwheel/planners/: __init__.py  gait_generator.py  gait_generator_3d.py  trajectory_planning.py  trajectory_planning_3d.py
legwheel/utils/: __init__.py  screw.py  utils.py
legwheel/visualization/: __init__.py  animation_alpha.py  plot_leg.py
render/: 3dplot_legacy.py  animation_corgi_robot.py  animation_multi_view.py  debug_views.py  plot_corgi_robot.py  plot_single_leg.py
scripts/: walk_trajectory.py  walk_trajectory_turn.py
