[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "legwheel"
version = "0.1.0"
description = "A library for leg-wheel robot control and trajectory planning"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["robotics", "kinematics", "trajectory-planning", "leg-wheel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "scipy>=1.5.0",
    "pandas>=1.1.0",
    "nlopt>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/legwheel"
Documentation = "https://legwheel.readthedocs.io"
Repository = "https://github.com/yourusername/legwheel"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
